--- a/contacts.html
+++ b/contacts.html
@@ -6,8 +6,8 @@
   <style type="text/css">
 	.none {
 	padding-bottom: 7px;
-	padding-left: 27px;
-	width: 110px;
+	padding-left: 6px;
+	width: auto;
 	}
 	.ava {
 	margin-bottom: 20px;
