--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
  <head>
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title> Karasev Architect </title>
   <style type="text/css">
     img {
@@ -32,6 +32,15 @@
 	padding-bottom: 40px;
 	font: 12pt Book Antiqua;
 	}
+	.none {
+	padding-bottom: 7px;
+	padding-left: 27px;
+	width: auto		;
+	}
+	.mail {
+	float: right;
+	font: 13pt Book Antiqua;
+	}
   </style>
   </head>
  <body>
@@ -42,8 +51,10 @@
    </div>
      </header>
     <div class="leftcol">
-    <img src="images/resize/image_01_res.jpg">
+    <img style="padding-top:65px" src="images/resize/image_01_res.jpg">
 	   <p> Жилой комплекс по ул. К.Маркса<br>г. Чебоксары, 2021</p>   
+	<img src="images/resize/image_13_res.jpg">
+	   <p> Панельный жилой дом<br>г. Южно-Сахалинск, 2018</p> 
     <img src="images/resize/image_03_res.jpg">
 	   <p> Коттеждный поселок<br>г. Сочи, Адлер 2021</p>   
 		<img src="images/resize/image_05_res.jpg">
@@ -56,19 +67,21 @@
 	   <p> Здание автосалона<br>г. Чебоксары, 2016</p>
   </div>  
   <div class="rightcol">
-    <img src="images/resize/image_02_res.jpg">
-	   <p> Концепция фасадов из клинкера для панельных домов<br>г. Самара, 2015</p>
+  	<img src="images/resize/image_08_res.jpg">
+	   <p> Частный жилой дом "Шале"<br>г. Чебоксары, 2014</p>
+	<img src="images/resize/image_14_res.jpg">
+	   <p> Жилой комплекс Энтузиастов <br>г. Чебоксары, 2019</p>
 	<img src="images/resize/image_04_res.jpg">
-	   <p> Частный дом<br>д. Толиково, 2021</p>
+		   <p> Частный дом<br>д. Толиково, 2021</p>
+	<img src="images/resize/image_02_res.jpg">
+	   <p> Концепция фасадов из клинкера для панельных домов<br>г. Самара, 2015</p>
 	<img src="images/resize/image_06_res.jpg">
 	   <p> Магазин, пристрой <br>г. Чебоксары, 2018</p>
-	<img src="images/resize/image_08_res.jpg">
-	   <p> Частный жилой дом "Шале"<br>г. Чебоксары, 2014</p>
 	<img src="images/resize/image_10_res.jpg">
 	   <p> Частный дом<br>д. Шомиково, 2021</p>
 	<img src="images/resize/image_12_res.jpg">
 	   <p> Жилой комплекс <br>г. Сочи, Красная Поляна, 2021</p>
    </div>
   </body>
-</html>
+   </html>
 	
