--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
    </div>
      </header>
     <div class="leftcol">
-    <img style="padding-top:63px" src="images/resize/image_01_res.jpg">
+    <div style="padding:20px"></div>
+    <img src="images/resize/image_01_res.jpg">
 	   <p> Жилой комплекс по ул. К.Маркса<br>г. Чебоксары, 2021</p>   
 	<img src="images/resize/image_13_res.jpg">
 	   <p> Панельный жилой дом<br>г. Южно-Сахалинск, 2018</p> 
