--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title> Karasev Architect </title>
+  <title>Архитектор Карасев</title>
   <style type="text/css">
     img {
     width: 100%;
@@ -45,7 +45,7 @@
   </head>
  <body>
   <header>
-   <div class="layer1"><a href=index.html>Архитектор <b>Карасев Андрей</b></a></div>
+   <div class="layer1"><a href=index.html>Архитектор <b>Андрей Карасев</b></a></div>
    <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
    <a href=contacts.html>Контакты</a>
    </div>
