--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	.none {
 	padding-bottom: 7px;
 	padding-left: 27px;
-	width: auto		;
+	width: auto;
 	}
 	.mail {
 	float: right;
@@ -68,6 +68,7 @@
 	   <p> Здание автосалона<br>г. Чебоксары, 2016</p>
   </div>  
   <div class="rightcol">
+	<div style="padding:20px"></div>
   	<img src="images/resize/image_08_res.jpg">
 	   <p> Частный жилой дом "Шале"<br>г. Чебоксары, 2014</p>
 	<img src="images/resize/image_14_res.jpg">
