--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 	 float: left;
 	 width: 47.2%;
 	 padding: 1.8%;
+	 font: 12pt Book Antiqua;
 	 }
 	.rightcol {
+	 font: 12pt Book Antiqua;
 	 margin-left: 49.2%;
 	 padding: 1.8%;
 	 }
