--- a/index.html
+++ b/index.html
@@ -1,79 +1,96 @@
-<!Doctype html>
-<html>
- <head>
-  <meta charset="utf-8">
-  <title>Архитектор Карасев</title>
-  <style type="text/css">
-    img {
-    width: 100%;
-    max-width: 740 px;
-    height: auto;
-	}
-    a {color: #000000; text-decoration: none;}
-    a:hover {text-decoration: underline; color: #666666;}
-    .layer1 {
-    background: #FFFFFF;
-	width: 50%;
-	font: 15pt Book Antiqua; 
-	padding: 2.4%;
-	position: fixed;
-	left: 0; top: 0;
-	}
-	.leftcol {
-	 float: left;
-	 width: 47.2%;
-	 padding: 1.8%;
-	 }
-	.rightcol {
-	 margin-left: 49.2%;
-	 padding: 1.8%;
-	 }
-	p {
-	padding-bottom: 40px;
-	font: 12pt Book Antiqua;
-	}
-</style>
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <title>Архитектор Карасев</title>
+    <style>
+      img {
+        width: 100%;
+        height: auto;
+      }
+      a {
+        color: #000000;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+        color: #666666;
+      }
+      .layer1 {
+        background: #ffffff;
+        width: 50%;
+        font: 15pt Book Antiqua;
+        padding: 2.4%;
+        position: fixed;
+        left: 0;
+        top: 0;
+      }
+      .leftcol {
+        float: left;
+        width: 47.2%;
+        padding: 1.8%;
+      }
+      .rightcol {
+        margin-left: 49.2%;
+        padding: 1.8%;
+      }
+      p {
+        padding-bottom: 40px;
+        font: 12pt Book Antiqua;
+      }
+    </style>
   </head>
- <body>
-  <header>
-   <div class="layer1"><a href=index.html>Архитектор <b>Андрей Карасев</b></a></div>
-   <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
-   <a href=contacts.html>Контакты</a>
-   </div>
- </header>
-    <div style="padding:20px"></div>
+  <body>
+    <header>
+      <div class="layer1">
+        <a href="index.html">Архитектор <b>Андрей Карасев</b></a>
+      </div>
+      <div
+        style="
+          font: 15pt Book Antiqua;
+          padding: 2.4%;
+          width: 50%;
+          background: #ffffff;
+          position: fixed;
+          right: 0;
+          top: 0;
+        "
+        >
+      <div style="float:right"> <a href=contacts.html>Контакты</a></div>
+      </div>
+    </header>
+    <div style="padding: 20px"></div>
     <div class="leftcol">
-    	 <img src="images/resize/image_01_res.jpg">
-	<p> Жилой комплекс по ул. К.Маркса<br>г. Чебоксары, 2021</p>   
-    	<img src="images/resize/image_13_res.jpg">
-	<p> Панельный жилой дом<br>г. Южно-Сахалинск, 2018</p> 
-        <img src="images/resize/image_03_res.jpg">
-	<p> Коттеждный поселок<br>г. Сочи, Адлер 2021</p>   
-	<img src="images/resize/image_05_res.jpg">
-	<p> Жилой дом <br>г. Сочи, Адлер, 2016</p>
-	<img src="images/resize/image_07_res.jpg">
-	<p> Панельный жилой дом<br>г. Пенза, 2021</p>
-	<img src="images/resize/image_09_res.jpg">
-	<p> Ресторан <br>г. Адлер, Сочи, 2021</p>
-	<img src="images/resize/image_11_res.jpg">
-	<p> Здание автосалона<br>г. Чебоксары, 2016</p>
-  </div>  
-  <div class="rightcol">
-  	<img src="images/resize/image_08_res.jpg">
-	<p> Частный жилой дом "Шале"<br>г. Чебоксары, 2014</p>
-	<img src="images/resize/image_14_res.jpg">
-	<p> Жилой комплекс Энтузиастов <br>г. Чебоксары, 2019</p>
-	<img src="images/resize/image_04_res.jpg">
-	<p> Частный дом<br>д. Толиково, 2021</p>
-	<img src="images/resize/image_02_res.jpg">
-	<p> Концепция фасадов из клинкера для панельных домов<br>г. Самара, 2015</p>
-	<img src="images/resize/image_06_res.jpg">
-	<p> Магазин, пристрой <br>г. Чебоксары, 2018</p>
-	<img src="images/resize/image_10_res.jpg">
-	<p> Частный дом<br>д. Шомиково, 2021</p>
-	<img src="images/resize/image_12_res.jpg">
-	<p> Жилой комплекс <br>г. Сочи, Красная Поляна, 2017</p>
-   </div>
-</body>
+      <img src="images/resize/image_01_res.jpg" />
+      <p>Жилой комплекс по ул. К.Маркса<br />г. Чебоксары, 2021</p>
+      <img src="images/resize/image_13_res.jpg" />
+      <p>Панельный жилой дом<br />г. Южно-Сахалинск, 2018</p>
+      <img src="images/resize/image_03_res.jpg" />
+      <p>Коттеждный поселок<br />г. Сочи, Адлер 2021</p>
+      <img src="images/resize/image_05_res.jpg" />
+      <p>Жилой дом <br />г. Сочи, Адлер, 2016</p>
+      <img src="images/resize/image_07_res.jpg" />
+      <p>Панельный жилой дом<br />г. Пенза, 2021</p>
+      <img src="images/resize/image_09_res.jpg" />
+      <p>Ресторан <br />г. Адлер, Сочи, 2021</p>
+      <img src="images/resize/image_11_res.jpg" />
+      <p>Здание автосалона<br />г. Чебоксары, 2016</p>
+    </div>
+    <div class="rightcol">
+      <img src="images/resize/image_08_res.jpg" />
+      <p>Частный жилой дом "Шале"<br />г. Чебоксары, 2014</p>
+      <img src="images/resize/image_14_res.jpg" />
+      <p>Жилой комплекс Энтузиастов <br />г. Чебоксары, 2019</p>
+      <img src="images/resize/image_04_res.jpg" />
+      <p>Частный дом<br />д. Толиково, 2021</p>
+      <img src="images/resize/image_02_res.jpg" />
+      <p>Концепция фасадов из клинкера для панельных домов<br />г. Самара, 2015</p>
+      <img src="images/resize/image_06_res.jpg" />
+      <p>Магазин, пристрой <br />г. Чебоксары, 2018</p>
+      <img src="images/resize/image_10_res.jpg" />
+      <p>Частный дом<br />д. Шомиково, 2021</p>
+      <img src="images/resize/image_12_res.jpg" />
+      <p>Жилой комплекс <br />г. Сочи, Красная Поляна, 2017</p>
+    </div>
+  </body>
 </html>
-	
