--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
     <meta charset="utf-8" />
     <title>Архитектор Карасев</title>
     <style>
-      p {
-        padding-bottom: 40px;
-        font: 12pt Book Antiqua;
-      }
       img {
         width: 100%;
         height: auto;
@@ -59,6 +55,7 @@
       <div style="float:right"> <a href=contacts.html>Контакты</a></div>
       </div>
     </header>
+    <div style="padding: 20px"></div>
     <div class="leftcol">
       <img src="images/resize/image_01_res.jpg" />
       <p>Жилой комплекс по ул. К.Маркса<br />г. Чебоксары, 2021</p>
