--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Архитектор Карасев</title>
     <style>
+      p {
+        padding-bottom: 40px;
+        font: 1em Book Antiqua;
+      }
       img {
         width: 100%;
         height: auto;
