--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
       p {
         padding-bottom: 40px;
-        font: 1em Book Antiqua;
+        font: 17px Book Antiqua;
       }
       img {
         width: 100%;
