--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Архитектор Карасев</title>
     <style>
       p {
+        -webkit-text-size-adjust: 100%;
         padding-bottom: 40px;
         font: 17px Book Antiqua;
       }
