--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title> Contacts </title>
+  <title> Контакты, архитектор Андрей Карасев </title>
   <style type="text/css">
 	.none {
 	padding-bottom: 7px;
