--- a/index.html
+++ b/index.html
@@ -43,21 +43,10 @@
   </head>
   <body>
     <header>
-      <div class="layer1">
-        <a href="index.html">Архитектор <b>Андрей Карасев</b></a>
-      </div>
-      <div
-        style="
-          font: 15pt Book Antiqua;
-          padding: 2.4%;
-          width: 50%;
-          background: #ffffff;
-          position: fixed;
-          right: 0;
-          top: 0;
-        "
-        >
-      <div style="float:right"> <a href=contacts.html>Контакты</a></div>
+   <div class="layer1">Архитектор <b>Андрей Карасев</b></div>
+   <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
+   <a style="padding-right: 20px;" href=index.html><b>ПРОЕКТЫ</b></a>
+   <a style="color: #999999" href=contacts.html><b>КОНТАКТЫ</b></a>
       </div>
     </header>
     <div style="padding: 20px"></div>
