--- a/contacts.html
+++ b/contacts.html
@@ -49,22 +49,21 @@
 <header>
    <div class="layer1">Архитектор <b>Андрей Карасев</b></div>
    <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 17px; top: 0;" align="right">
-   <a style="padding-right: 20px; color: #999999;" href=index.html><b>Проекты</b></a>
-   <a href=contacts.html><b>Контакты</b></a>
-   </div>
+   <a style="padding-right: 20px; color: #999999;" href=index.html><b>ПРОЕКТЫ</b></a>
+   <a href=contacts.html><b>КОНТАКТЫ</b></a>
    </div>
 </header>
  <div class="leftcol">
 	<img class="ava" src="other/ava.png"> 
     <p>Андрей Карасев, инженер-архитектор<br>
-       1986 - родился в г. Канаше, Чувашия<br>
+       1986 - родился в г. Канаш, Чувашия<br>
        2003 - окончил физико-математический класс, гимназия №2, г. Чебоксары<br>
        2009 - окончил строительный факультет ЧГУ по специальности «Проектирование зданий»<br>
        2008 - 2018 - работа в проектных компаниях:<br> 	
           &emsp;&emsp;&emsp;ООО «Архитектурная фирма «Сфера», г. Чебоксары<br>
           &emsp;&emsp;&emsp;ООО «Арт-Проект», г. Сочи<br>
           &emsp;&emsp;&emsp;ООО «АКБ «Полиспроект», г. Чебоксары<br>
-       2018 - по настоящее время - ИП, частная практика</p> 
+       2018 - по настоящее время - частная практика, ИП</p> 
  </div>
 <div class="rightcol">
   <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><img class="none" src="other/image_number.png"></div>
