--- a/contacts.html
+++ b/contacts.html
@@ -33,8 +33,7 @@
 	 margin-left: 49.2%;
 	 padding: 1.8%;
 	 padding-top: 110px;
-	 padding-right: 55px;
-	}
+	 }
 	p {
 	padding-bottom: 10px;
 	font: 12pt Book Antiqua;
@@ -48,7 +47,7 @@
 <body>
 <header>
    <div class="layer1">Архитектор <b>Андрей Карасев</b></div>
-   <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 17px; top: 0;" align="right">
+   <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
    <a style="padding-right: 20px; color: #999999;" href=index.html><b>ПРОЕКТЫ</b></a>
    <a href=contacts.html><b>КОНТАКТЫ</b></a>
    </div>
