--- a/contacts.html
+++ b/contacts.html
@@ -54,15 +54,15 @@
 </header>
  <div class="leftcol">
 	<img class="ava" src="other/ava.png"> 
-    <p>Андрей Карасев, инженер-архитектор<br>
-       1986 - родился в г. Канаш, Чувашия<br>
-       2003 - окончил физико-математический класс, гимназия №2, г. Чебоксары<br>
-       2009 - окончил строительный факультет ЧГУ по специальности «Проектирование зданий»<br>
-       2008 - 2018 - работа в проектных компаниях:<br> 	
-          &emsp;&emsp;&emsp;ООО «Архитектурная фирма «Сфера», г. Чебоксары<br>
-          &emsp;&emsp;&emsp;ООО «Арт-Проект», г. Сочи<br>
-          &emsp;&emsp;&emsp;ООО «АКБ «Полиспроект», г. Чебоксары<br>
-       2018 - по настоящее время - частная практика, ИП</p> 
+    <p>Андрей Карасев, инженер-архитектор.&nbsp<br>
+       1986 - родился в г. Канаш, Чувашия.&nbsp<br>
+       2003 - окончил физико-математический класс, гимназия №2, г. Чебоксары.&nbsp<br>
+       2009 - окончил строительный факультет ЧГУ по специальности «Проектирование зданий».&nbsp<br>
+       2008 - 2018 - работа в проектных компаниях:.&nbsp<br> 	
+          &emsp;&emsp;&emsp;ООО «Архитектурная фирма «Сфера», г. Чебоксары;&nbsp<br>
+          &emsp;&emsp;&emsp;ООО «Арт-Проект», г. Сочи;&nbsp<br>
+          &emsp;&emsp;&emsp;ООО «АКБ «Полиспроект», г. Чебоксары.&nbsp<br>
+       2018 - по настоящее время - частная практика, ИП&nbsp</p> 
  </div>
 <div class="rightcol">
   <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><img class="none" src="other/image_number.png"></div>
