--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Архитектор Карасев</title>
+    <title>Архитектор Андрей Карасев</title>
     <style>
       p {
         -webkit-text-size-adjust: 100%;
@@ -43,7 +43,7 @@
   </head>
   <body>
     <header>
-   <div class="layer1">Архитектор <b>Андрей Карасев</b></div>
+   <section class="layer1">Архитектор <b>Андрей Карасев</b></section>
    <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
    <a style="padding-right: 20px;" href=index.html><b>ПРОЕКТЫ</b></a>
    <a style="color: #999999" href=contacts.html><b>КОНТАКТЫ</b></a>
