--- a/contacts.html
+++ b/contacts.html
@@ -46,7 +46,7 @@
  </head>
 <body>
 <header>
-   <div class="layer1">Архитектор <b>Андрей Карасев</b></div>
+   <section class="layer1">Архитектор <b>Андрей Карасев</b></section>
    <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
    <a style="padding-right: 20px; color: #999999;" href=index.html><b>ПРОЕКТЫ</b></a>
    <a href=contacts.html><b>КОНТАКТЫ</b></a>
