--- a/index.html
+++ b/index.html
@@ -51,35 +51,36 @@
     </header>
     <div style="padding: 20px"></div>
     <div class="leftcol">
-      <img src="images/resize/image_01_res.jpg" />
+      <img alt="Группа жилых домов со встроенно-пристроенными предприятиями обслуживания а автостоянкой по ул. К. Маркса, г. Чебоксары" src="images/resize/image_01_res.jpg" />
       <p>Жилой комплекс по ул. К.Маркса<br />г. Чебоксары, 2021</p>
-      <img src="images/resize/image_13_res.jpg" />
+      <img alt="Эскизный проект группы жилых домов в крупнопанельном исполнения для г. Южно-Сахалинск" src="images/resize/image_13_res.jpg" />
       <p>Панельный жилой дом<br />г. Южно-Сахалинск, 2018</p>
-      <img src="images/resize/image_03_res.jpg" />
+      <img alt="Коттеджный поселок г. Сочи, Адлер, ул. Подольская" src="images/resize/image_03_res.jpg" />
       <p>Коттеждный поселок<br />г. Сочи, Адлер 2021</p>
-      <img src="images/resize/image_05_res.jpg" />
-      <p>Жилой дом <br />г. Сочи, Адлер, 2016</p>
-      <img src="images/resize/image_07_res.jpg" />
+      <img alt="Апарт-отель Soned House», г. Сочи, Адлер, ул. Камышовая, 14" src="images/resize/image_05_res.jpg" />
+      <p>Апарт-отель «Soned House»<br />г. Сочи, Адлер, 2016</p>
+      <img alt="Многоэтажный многоквартирный жилой дом со встроенными нежилыми помещениями общественного
+ назначения, по адресу: г. Пенза, ул. Антонова" src="images/resize/image_07_res.jpg" />
       <p>Панельный жилой дом<br />г. Пенза, 2021</p>
-      <img src="images/resize/image_09_res.jpg" />
-      <p>Ресторан <br />г. Адлер, Сочи, 2021</p>
-      <img src="images/resize/image_11_res.jpg" />
+      <img alt="Ресторан, г. Сочи, Адлер, ул. Камышовая / ул. Перелетная" src="images/resize/image_09_res.jpg" />
+      <p>Ресторан <br />г. Сочи, Адлер 2021</p>
+      <img alt="Здание автосалона поддержанных автомобилей по ул. Тракторостроителей, г. Чебоксары" src="images/resize/image_11_res.jpg" />
       <p>Здание автосалона<br />г. Чебоксары, 2016</p>
     </div>
     <div class="rightcol">
-      <img src="images/resize/image_08_res.jpg" />
+      <img alt="Частный жилой дом Шале" src="images/resize/image_08_res.jpg" />
       <p>Частный жилой дом "Шале"<br />г. Чебоксары, 2014</p>
-      <img src="images/resize/image_14_res.jpg" />
+      <img alt="Жилой комплекс Энтузиастов по ул. Энтузиастов, г. Чебоксары" src="images/resize/image_14_res.jpg" />
       <p>Жилой комплекс Энтузиастов <br />г. Чебоксары, 2019</p>
-      <img src="images/resize/image_04_res.jpg" />
+      <img alt="Частный жилой дом, д. Толиково" src="images/resize/image_04_res.jpg" />
       <p>Частный дом<br />д. Толиково, 2021</p>
-      <img src="images/resize/image_02_res.jpg" />
+      <img alt="Квартал 4, 5, 6 пятой очереди застройки жилого района Южный город, г. Самара. Предпроектная проработка. Концепция фасадов из клинкера для панельных домов" src="images/resize/image_02_res.jpg" />
       <p>Концепция фасадов из клинкера для панельных домов<br />г. Самара, 2015</p>
-      <img src="images/resize/image_06_res.jpg" />
+      <img alt="Пристрой к встроенным нежилым помещениям 1 этажа жилого дома по ул. М. Горького, 6, г. Чебоксары" src="images/resize/image_06_res.jpg" />
       <p>Магазин, пристрой <br />г. Чебоксары, 2018</p>
-      <img src="images/resize/image_10_res.jpg" />
+      <img alt="Частный жилой дом, д. Шомиково" src="images/resize/image_10_res.jpg" />
       <p>Частный дом<br />д. Шомиково, 2021</p>
-      <img src="images/resize/image_12_res.jpg" />
+      <img alt="Жилой комплекс, г. Сочи, Красная Поляна" src="images/resize/image_12_res.jpg" />
       <p>Жилой комплекс <br />г. Сочи, Красная Поляна, 2017</p>
     </div>
   </body>
