--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Архитектор Андрей Карасев</title>
+    <title>Архитектор Андрей Карасев.</title>
+    <meta name="description" content="Разработка архитектуры зданий, г. Чебоксары">
     <style>
       p {
         -webkit-text-size-adjust: 100%;
@@ -44,10 +45,10 @@
   <body>
     <header>
    <section class="layer1">Архитектор <b>Андрей Карасев</b></section>
-   <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
+   <nav style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
    <a style="padding-right: 20px;" href=index.html><b>ПРОЕКТЫ</b></a>
    <a style="color: #999999" href=contacts.html><b>КОНТАКТЫ</b></a>
-      </div>
+      </nav>
     </header>
     <div style="padding: 20px"></div>
     <div class="leftcol">
