--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title> Контакты, архитектор Андрей Карасев </title>
+  <meta name="description" content="О себе.">
   <style type="text/css">
 	.none {
 	padding-bottom: 7px;
@@ -47,13 +48,14 @@
 <body>
 <header>
    <section class="layer1">Архитектор <b>Андрей Карасев</b></section>
-   <div style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
+   <nav style="font:15pt Book Antiqua; padding: 2.4%; width: 50%; background: #FFFFFF; position: fixed; right: 0; top: 0;" align="right">
    <a style="padding-right: 20px; color: #999999;" href=index.html><b>ПРОЕКТЫ</b></a>
    <a href=contacts.html><b>КОНТАКТЫ</b></a>
-   </div>
+   </nav>
 </header>
  <div class="leftcol">
 	<img class="ava" src="other/ava.png"> 
+    <section> 
     <p>Андрей Карасев, инженер-архитектор.&nbsp<br>
        1986 - родился в г. Канаш, Чувашия.&nbsp<br>
        2003 - окончил физико-математический класс, гимназия №2, г. Чебоксары.&nbsp<br>
@@ -62,7 +64,8 @@
           &emsp;&emsp;&emsp;ООО «Архитектурная фирма «Сфера», г. Чебоксары;&nbsp<br>
           &emsp;&emsp;&emsp;ООО «Арт-Проект», г. Сочи;&nbsp<br>
           &emsp;&emsp;&emsp;ООО «АКБ «Полиспроект», г. Чебоксары.&nbsp<br>
-       2018 - по настоящее время - частная практика, ИП&nbsp</p> 
+       2018 - по настоящее время - частная практика, ИП&nbsp</p>  
+	 </section>
  </div>
 <div class="rightcol">
   <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><img class="none" src="other/image_number.png"></div>
