--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Архитектор Андрей Карасев.</title>
-    <meta name="description" content="Разработка архитектуры зданий, г. Чебоксары">
+    <title>Андрей Карасев, архитектор </title>
+    <meta name="description" content="Архитектурное проектирование зданий, г. Чебоксары">
     <style>
       p {
         -webkit-text-size-adjust: 100%;
