--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="utf-8" />
     <title>Андрей Карасев, архитектор </title>
     <meta name="description" content="Архитектурное проектирование зданий, г. Чебоксары">
+    <meta name="keywords" content="проект, проектирование, архитектура, архитектор, коттедж, жилой, дом">
     <style>
+       .i{
+	width: 20px;
+	high: 20px;
+	margin-top: 5px;
+		}
       p {
         -webkit-text-size-adjust: 100%;
         padding-bottom: 40px;
@@ -84,5 +90,13 @@
       <img alt="Жилой комплекс, г. Сочи, Красная Поляна" src="images/resize/image_12_res.jpg" />
       <p>Жилой комплекс <br />г. Сочи, Красная Поляна, 2017</p>
     </div>
+         <footer style="width=100%; margin:1.8%; padding-bottom: 1px; padding-top: 1px;">
+    <div style="width=100%; padding-bottom: 0px; padding-top: 1px; background: #dcdcdc;"> </div>
+	<p style="padding-bottom:0;">
+	<img class="i" src="other/png_phone.png" hspace="10">
+   +7.927.665.40.28
+   <img class="i" src="other/png_mail.png" hspace="10"> 
+   mail@akarasev.ru 
+	</p>
   </body>
 </html>
