--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,11 @@
   <title> Контакты, архитектор Андрей Карасев </title>
   <meta name="description" content="О себе.">
   <style type="text/css">
+	   .i{
+	width: 20px;
+	high: 20px;
+	margin-top: 5px;
+		}
 	.none {
 	padding-bottom: 7px;
 	padding-left: 6px;
@@ -68,8 +73,17 @@
 	 </section>
  </div>
 <div class="rightcol">
-  <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><img class="none" src="other/image_number.png"></div>
+  <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><div class="mail">+7.927.665.40.28</div></div>
   <div align="right"><img float="left" src="other/png_mail.png" width="25" height="25" hspace="10"><div class="mail">mail@akarasev.ru</div></div>
 </div>
+   <footer style="width=100%; margin:1.8%; padding-bottom: 1px; padding-top: 1px;">
+    <div style="width=100%; padding-bottom: 0px; padding-top: 1px; background: #dcdcdc;"> </div>
+	<p style="padding-bottom:0;">
+	<img class="i" src="other/png_phone.png" hspace="10">
+   +7.927.665.40.28
+   <img class="i" src="other/png_mail.png" hspace="10"> 
+   mail@akarasev.ru 
+	</p>
+	</footer>	
 </body>
 </html>
