--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <title>Андрей Карасев, архитектор </title>
+    <title>Архитектор Андрей Карасев. Проекты. </title>
     <meta name="description" content="Архитектурное проектирование зданий, г. Чебоксары">
     <meta name="keywords" content="проект, проектирование, архитектура, архитектор, коттедж, жилой, дом">
     <style>
