--- a/contacts.html
+++ b/contacts.html
@@ -73,8 +73,9 @@
 	 </section>
  </div>
 <div class="rightcol">
-  <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><div class="mail" style="width: 18%">+7.927.665.40.28</div></div>
-  <div align="right"><img float="left" src="other/png_mail.png" width="25" height="25" hspace="10"><div class="mail" style="width: 18%">mail@akarasev.ru</div></div>
+  <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><div class="mail" style="width: 21%">+7.927.665.40.28</div></div>
+	  <div style="padding:3px"></div>
+  <div align="right"><img float="left" src="other/png_mail.png" width="25" height="25" hspace="10"><div class="mail" style="width: 21%">mail@akarasev.ru</div></div>
 </div>
 </body>
 </html>
