--- a/contacts.html
+++ b/contacts.html
@@ -36,6 +36,7 @@
 	 padding: 1.8%;
 	 }
 	.rightcol {
+	 -webkit-text-size-adjust: 100%;
 	 margin-left: 49.2%;
 	 padding: 1.8%;
 	 padding-top: 110px;
