--- a/contacts.html
+++ b/contacts.html
@@ -49,6 +49,9 @@
 	float: right;
 	font: 13pt Book Antiqua;
 	}
+	.i{
+	margin-left:76%;
+	}
   </style>
  </head>
 <body>
@@ -74,9 +77,9 @@
 	 </section>
  </div>
 <div class="rightcol">
-  <div align="right"><img float="left" src="other/png_phone.png" width="25" height="25" hspace="10"><div class="mail" style="width: 21%">+7.927.665.40.28</div></div>
-	  <div style="padding:3px"></div>
-  <div align="right"><img float="left" src="other/png_mail.png" width="25" height="25" hspace="10"><div class="mail" style="width: 21%">mail@akarasev.ru</div></div>
+  <div><img class="i" src="other/png_phone.png" width="25" height="25" hspace="10"><div class="mail" >+7.927.665.40.28</div></div>
+	  <div style="padding:5px"></div>
+  <div><img class="i" src="other/png_mail.png" width="25" height="25" hspace="10"><div class="mail">mail@akarasev.ru</div></div>
 </div>
 </body>
 </html>
