--- a/contacts.html
+++ b/contacts.html
@@ -6,9 +6,10 @@
   <meta name="description" content="О себе.">
   <style type="text/css">
 	   .i{
-	width: 20px;
-	high: 20px;
-	margin-top: 5px;
+	margin-left:70%;
+	width: 25px;
+	high: 25 px;
+	hspace: 10px;
 		}
 	.none {
 	padding-bottom: 7px;
@@ -49,10 +50,7 @@
 	float: right;
 	font: 13pt Book Antiqua;
 	}
-	.i{
-	margin-left:76%;
-	}
-  </style>
+	  </style>
  </head>
 <body>
 <header>
@@ -77,9 +75,9 @@
 	 </section>
  </div>
 <div class="rightcol">
-  <div><img class="i" src="other/png_phone.png" width="25" height="25" hspace="10"><div class="mail" >+7.927.665.40.28</div></div>
+  <div><img class="i" src="other/png_phone.png"><div class="mail" >+7.927.665.40.28</div></div>
 	  <div style="padding:5px"></div>
-  <div><img class="i" src="other/png_mail.png" width="25" height="25" hspace="10"><div class="mail">mail@akarasev.ru</div></div>
+  <div><img class="i" src="other/png_mail.png"><div class="mail">mail@akarasev.ru</div></div>
 </div>
 </body>
 </html>
