--- a/contacts.html
+++ b/contacts.html
@@ -6,10 +6,11 @@
   <meta name="description" content="О себе.">
   <style type="text/css">
 	   .i{
-	margin-left:70%;
+	margin-left:76%;
 	width: 25px;
 	high: 25 px;
 	hspace: 10px;
+	float:left;
 		}
 	.none {
 	padding-bottom: 7px;
@@ -48,7 +49,7 @@
 	}
 	.mail {
 	float: right;
-	font: 13pt Book Antiqua;
+	font: 18px Book Antiqua;
 	}
 	  </style>
  </head>
@@ -76,7 +77,7 @@
  </div>
 <div class="rightcol">
   <div><img class="i" src="other/png_phone.png"><div class="mail" >+7.927.665.40.28</div></div>
-	  <div style="padding:5px"></div>
+	  <div style="padding:20px"></div>
   <div><img class="i" src="other/png_mail.png"><div class="mail">mail@akarasev.ru</div></div>
 </div>
 </body>
