--- a/contacts.html
+++ b/contacts.html
@@ -6,10 +6,8 @@
   <meta name="description" content="О себе.">
   <style type="text/css">
 	   .i{
-	margin-left:76%;
 	width: 25px;
 	high: 25 px;
-	hspace: 10px;
 	float:left;
 		}
 	.none {
@@ -76,9 +74,9 @@
 	 </section>
  </div>
 <div class="rightcol">
-  <div><img class="i" src="other/png_phone.png"><div class="mail" >+7.927.665.40.28</div></div>
+  <div class="mail"><img class="i" src="other/png_phone.png">&emsp;&nbsp;+7.927.665.40.28</div>
 	  <div style="padding:20px"></div>
-  <div><img class="i" src="other/png_mail.png"><div class="mail">mail@akarasev.ru</div></div>
+  <div class="mail"><img class="i" src="other/png_mail.png">&nbsp;&nbsp;mail@akarasev.ru</div>
 </div>
 </body>
 </html>
