--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JKXMT0BQV8');
+</script>
     <meta charset="utf-8" />
     <title>Архитектор Андрей Карасев. Проекты. </title>
     <meta name="description" content="Архитектурное проектирование зданий, г. Чебоксары">
