--- a/contacts.html
+++ b/contacts.html
@@ -9,6 +9,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-JKXMT0BQV8');
+</script>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title> Контакты, архитектор Андрей Карасев </title>
   <meta name="description" content="О себе.">
