--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   gtag('config', 'G-JKXMT0BQV8');
 </script>
     <meta charset="utf-8" />
-    <title>Архитектор Андрей Карасев. Проекты. </title>
-    <meta name="description" content="Архитектурное проектирование зданий, г. Чебоксары">
+    <title>Архитектор Андрей Карасев</title>
+    <meta name="description" content="Разработка архитектурных проектов зданий, г. Чебоксары">
     <meta name="keywords" content="проект, проектирование, архитектура, архитектор, коттедж, жилой, дом">
     <style>
        .i{
