--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <title>Архитектор Андрей Карасев</title>
     <meta name="description" content="Разработка архитектурных проектов зданий, г. Чебоксары">
-    <meta name="keywords" content="проект, проектирование, архитектура, архитектор, коттедж, жилой, дом">
+    <meta name="keywords" content="проект, проектирование, архитектура, архитектор, коттедж, жилой, дом, архитекторы, Чебоксары">
     <style>
        .i{
 	width: 20px;
